[package]
name = "tri_ton"
authors = ["u/nondescript_potato"]
description = "A Macro for Handling Exceptions"
readme = "README.md"
repository = "https://github.com/EMcConnell20/tri_ton.git"
documentation = "https://docs.rs/tri_ton/0.0.2/tri_ton/"
keywords = ["macro", "utility", "enum"]
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
